.azure/dev/dev.medicrates.namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: medicrates-dev
  labels:
    azure-key-vault-env-injection: enabled
    istio-injection: enabled
