.azure/dev/dev.medicrates.service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: medicrates
  namespace: medicrates-dev
  labels:
    app: medicrates
    version: 1.0.0
    aadpodidbinding: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medicrates
  template:
    metadata:
      labels:
        app: medicrates
        version: 1.0.0
        aadpodidbinding: identity
    spec:
      containers:
      - name: medicrates
        image: itblue.azurecr.io/medicrates-dev/medicrates:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: medicrates
  namespace: medicrates-dev
spec:
  selector:
    app: medicrates
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  type: ClusterIP
