.azure/dev/dev.medicrates.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: medicrates-dev-ingress
  namespace: medicrates-dev
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.org/proxy-connect-timeout: "60s"
    nginx.org/proxy-read-timeout: "60s"
    nginx.org/client-max-body-size: "50m"
spec:
  tls:
  - hosts:
    - dev.medicrates.com
    secretName: dev.medicrates.com-tls-secret
  rules:

  - host: dev.medicrates.com
    http:
      paths:
      - path: /
        backend:
          serviceName: medicrates
          servicePort: 80
